--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,7 @@
 To do
-Create live pages for contact, work, about
-Update links on nav bar
-
-Create all components for other pages
-create formspree form and update contact box
-add the rest of the projects
+Update social links in footer and profile
+update text in about
+clean up homepage - remove some work tiles to drive people to main ones
+create formspree account for may and create a form and update contact box
 Sort the project cards
-add work link to project cards on homepage
 
